<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ProjeVip</string>
    <string name="recognize_microphone">Mikrofonu Aç</string>
    <string name="stop_microphone">Mikrofonu Kapat</string>
    <string name="preparing">Kayıt Hazırlanıyor\n</string>
    <string name="ready">Hazır\n</string>
    <string name="failed">Failed to init recognizer %s\n</string>
    <string name="elapsed">Result %s elapsed %d milliseconds\n</string>
    <string name="starting">Başlıyor\n</string>
    <string name="say_something">Bir Şeyler Söyleyin\n</string>
    <string name="pause">Durdur</string>
    <string name="continueRecognition">Devam</string>
    <string name="dinleniyor">Dinleniyor...</string>
    <string name="soylenilen">Soylenilen:  </string>
    <string name="sistemoncesi_sistemAcKapa">Sistem Aç / Kapat</string>
    <string name="sistemoncesi_textAcKapaTikla">Lütfen Sistem Aç / Kapat Butonuna Tıklayınız</string>
    <string name="main_btYok">Bluetooth Bağlantısı Kurulamadı</string>
    <string name="main_tvTekrarDene">Tekrar Dene</string>
    <string name="sistemsonrasi_solKapi">SOL KAPI</string>
    <string name="sistemsonrasi_ayarlar">AYARLAR</string>
    <string name="sistemsonrasi_sagKapi">SAĞ KAPI</string>
    <string name="sistemsonrasi_sistemAcKapat">SİSTEM AÇ/KAPAT</string>
    <string name="sistemsonrasi_logo">Logo</string>
    <string name="sistemsonrasi_solUpArrow">solUpArrow</string>
    <string name="sistemsonrasi_sagUpArrow">sagUpArrow</string>
    <string name="sistemsonrasi_solDownArrow">solDownArrow</string>
    <string name="sistemsonrasi_sagDownArrow">sagDownArrow</string>
    <string name="sistemsonrasi_interkom">INTERKOM</string>
    <string name="sistemsonrasi_tvKoltuklar">KOLTUKLAR</string>
    <string name="sistemsonrasi_tvKontroller">KONTROLLER</string>
    <string name="sistemsonrasi_tvMultimedya">MULTİMEDYA</string>
    <string name="sistemsonrasi_tvIsiklar">IŞIKLAR</string>
    <string name="sistemsonrasi_interkombutonu">interkom butonu</string>
    <string name="fragKoltuk_Mod">MOD</string>
    <string name="fragKoltuk_masaj">Masaj</string>
    <string name="fragKoltuk_ac">AÇ</string>
    <string name="fragKoltuk_kapat">KAPAT</string>
    <string name="fragKoltuk_masa1">1. Masa</string>
    <string name="fragKoltuk_masaAc">AÇ</string>
    <string name="fragKoltuk_masa2">2. Masa</string>
    <string name="fragKoltuk_masa3">3. Masa</string>
    <string name="fragKoltuk_masa4">4. Masa</string>
    <string name="koltukbirinciayar">koltukBirinciAyar</string>
    <string name="koltukIkinciAyar">koltukIkinciAyar</string>
    <string name="koltukUcuncuAyar">koltukucuncuayar</string>
    <string name="koltukMAyar">koltukMAyar</string>
    <string name="koltukIleriButon">koltukIleriButon</string>
    <string name="koltukGeriButon">koltukGeriButon</string>
    <string name="koltukBelIleriButon">koltukBelIleriButon</string>
    <string name="koltukBelGeriButon">koltukBelGeriButon</string>
    <string name="koltukbasyukaributonu">koltukBasYukariButonu</string>
    <string name="koltukbasasagibutonu">koltukBasAsagiButonu</string>
    <string name="isiticikirmizi">isiticiKirmizi</string>
    <string name="isiticiripple">isiticiRipple</string>
    <string name="isiticimavi">isiticimavi</string>
    <string name="koltukyukari">koltukYukari</string>
    <string name="koltukasagi">koltukAsagi</string>
    <string name="icon_home">icon_home</string>
    <string name="speech_prompt">Konuş</string>
    <string name="tavan_ayd_nlatma_kontrol">Tavan Aydınlatma
        Kontrol</string>
    <string name="kapat">Kapat</string>
    <string name="tavankirmizi">tavanKirmizi</string>
    <string name="tavanyesil">tavanYesil</string>
    <string name="tavangriv2">tavanGriv2</string>
    <string name="tavangri">tavanGri</string>
    <string name="tavanmavi">tavanMavi</string>
    <string name="k_rm_z">Kırmızı </string>
    <string name="ye_il">Yeşil</string>
    <string name="tavanMavi">Mavi</string>
    <string name="yan_ayd_nlatma_kontrol">Yan Aydınlatma Kontrol</string>
    <string name="yankirmizi">YanKirmizi</string>
    <string name="yanyesil">yanyesil</string>
    <string name="yanmavi">yanmavi</string>
    <string name="yangriv2">yangriv2</string>
    <string name="yangri">yangri</string>
    <string name="icgri">icgri</string>
    <string name="icgriv2">icgriv2</string>
    <string name="icmavi">icmavi</string>
    <string name="icyesil">icyesil</string>
    <string name="ickirmizi">ickirmizi</string>
    <string name="ic_aydinlatma_kontrol">İç Aydınlatma Kontrol</string>
    <string name="sol_okuma_lambas">Sol Okuma Lambası</string>
    <string name="sa_okuma_lambas">Sağ Okuma Lambası</string>
    <string name="haf_zalar">Hafızalar</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="hafiza">Hafiza</string>
    <string name="_1_koltuk">     1.Koltuk     </string>
    <string name="_2_koltuk">     2.Koltuk     </string>
    <string name="_3_koltuk">     3.Koltuk     </string>
    <string name="_4_koltuk">     4.Koltuk     </string>
    <string name="logo">logo</string>
    <string name="ses_k_sma_konu">Ses Kısma İkonu</string>
    <string name="dvd_ikonu">dvd ikonu</string>
    <string name="ses_yukseltme_ikonu">ses yukseltme ikonu</string>
    <string name="on_kamera_ikonu">on kamera ikonu</string>
    <string name="on_kamera">Ön Kamera</string>
    <string name="ekran_b_l_c">Ekran Bölücü</string>
    <string name="arka_kamera">Arka Kamera</string>
    <string name="ekran_bolucu">Ekran bolucu</string>
    <string name="kumanda">Kumanda</string>
    <string name="roof">Roof</string>
    <string name="tavan_monit_r">Tavan Monitörü</string>
    <string name="newapple">newapple</string>
    <string name="bilgisayar">Bilgisayar</string>
    <string name="playstation">PlayStation</string>
    <string name="geri_tu_u">Geri Tuşu</string>
    <string name="home">Home</string>
    <string name="power">power</string>
    <string name="play">play</string>

</resources>
